# AutoKernel

./: .gitignore  README.md  README_CN.md
AutoSearch/: CMakeLists.txt  README.md
AutoSearch/CostModel/: README.md  Weights.py  autosampler.py  bench_arm.sh  costmodel.py  doc_CN.md  sample_load.py  test.cpp
AutoSearch/cost_model/: DefaultCostModel.py  NetworkSize.py  Weights.py  cost_model.py  first_test.json  first_test.weights  matmul_batch_0000_sample_0000.sample  readme.md  retrain_cost_model.py  sample_load.py  weight_trans.py
AutoSearch/generator/: batch_matmul.cpp  random_pipeline_generator.cpp
AutoSearch/src/: CMakeLists.txt  utils.h
AutoSearch/src/adams2019/: AutoSchedule.cpp  CMakeLists.txt  Makefile  autotune_loop.sh  demo_generator.cpp
AutoSearch/src/common/: BoundEstimate.h  DataOP.h  DataTransform.h  HalidePlugin.h
AutoSearch/src/li2018/: CMakeLists.txt  GradientAutoscheduler.cpp
AutoSearch/src/mullapudi2016/: AutoSchedule.cpp
AutoSearch/src/sioutas2020/: AutoSchedule.cpp
AutoSearch/toolkit/: RunGen.h  RunGenMain.cpp  shape_config.py  tools.py  utils.py
AutoSearch/toolkit/template/: demo_eval.cpp  demo_run.cpp
Dockerfile/: Dockerfile.cpu
Dockerfiles/cuda/: Dockerfile
Dockerfiles/opencl/: Dockerfile
auto_deploy/: README.md  generated_op.py  graph.py  graph_tutorial.ipynb  mnist.py  op_build.sh  op_codegen.py  op_gen.cpp  op_generator.py  pass_manager.py
auto_deploy/c_source/: main.cpp
auto_deploy/data/: main_head  mnist.weights  reg_str
autokernel_plugin/: .gitignore  CMakeLists.txt  tm_classification
autokernel_plugin/common/: GenGen.cpp
autokernel_plugin/include/: Halide.h
autokernel_plugin/scripts/: clean.sh  generate.sh  register_op.sh
autokernel_plugin/src/: CMakeLists.txt  plugin_init.cpp
autokernel_plugin/src/depthwise/: build.sh  depthwise.cpp  depthwise.h  depthwise_gen  depthwise_gen.cc  halide_depthwise.h
autokernel_plugin/src/direct_conv/: build.sh  direct_conv.cpp  direct_conv.h  direct_conv_gen  direct_conv_gen.cc  halide_direct_conv.h
autokernel_plugin/src/fc/: build.sh  fc.cpp  fc.h  fc_gen.cc  test_fullconcted.cpp
autokernel_plugin/src/im2col_conv/: build.sh  halide_im2col_conv.h  im2col_conv.cpp  im2col_conv.h  im2col_conv_gen  im2col_conv_gen.cc
autokernel_plugin/src/normalize/: build.sh  normalize.cpp  normalize.h  normalize_gen.cc
autokernel_plugin/src/pool/: avepool_gen  avepool_gen.cc  build.sh  halide_avepool.h  halide_maxpool.h  maxpool_gen  maxpool_gen.cc  pool.cpp  pool.h
autokernel_plugin/src/softmax/: build.sh  softmax.cpp  softmax.h  softmax_gen.cc
autokernel_plugin/template/: build.sh  generator.cc  template.cpp  template.h
autokernel_plugin/tests/: CMakeLists.txt  test_conv.cpp  test_depthwise.cpp  test_fc.cpp  test_normalize.cpp  test_pool.cpp  test_softmax.cpp  tm_classification.cpp
autokernel_plugin/tests/common/: common.hpp  utils.hpp
doc/: architecure.md  how_to_add_op.md  quick_start.md  readme.md  roadmap.md
doc/tutorials/: 01_AutoKernel开发环境快速入门.md  02_Tengine快速入门.md  03_Halide初体验.md  04_AutoKernel插件指南.md  05_Halide调度策略Schedule.md  06_GEMM调度策略优化指南.md  readme.md
doc/tutorials/data/: 02_tengine_tutorial.cpp  03_halide_basic.py  03_halide_feed_data.py  03_halide_magic.py  04_test_relu.cpp  05_loop_schedule.py  06_build.sh  06_gemm_optimization.cpp  CMakeLists.txt
examples/cuda_matmul/: CMakeLists.txt  matmul_gen.cpp  matmul_run.cpp  readme.md
